# correctover-crewai

./: LICENSE  README.md  STANDARDS.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py
src/correctover_crewai/: __init__.py  adapter.py  models.py  recompute.py  verifier.py
tests/: test_adapter.py
