[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "correctover-crewai"
version = "0.1.0"
description = "Recomputable verification adapter for CrewAI — 6-dim verification, drift detection, and verified failover"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Correctover", email = "wanggui.gui@neuralbridge.cn" }
]
keywords = ["crewai", "verification", "llm", "ai-agents", "recomputable", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "correctover>=1.1.0",
    "crewai>=0.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://correctover.com"
Repository = "https://github.com/Correctover/correctover-crewai"
Issues = "https://github.com/Correctover/correctover-crewai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/correctover_crewai"]
